test/bad/12-wrong-number-of-arguments.bq
def int add(int x, int y) {
    return x+y;
}
print add(1);
